--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<title>FLOR & DESIGN</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/splide.min.css">
+	<script src="js/splide.min.js" defer></script>
+	<script src="js/mis-scripts.js" defer></script>
 </head>
 
 <body>
@@ -18,7 +21,7 @@
 				</a>
 				<ul class="col-md-5 text-uppercase list-unstyled list-inline">
 					<li class="active">PORTADA</li>
-					<li class="">JARDIN VERTICAL</li>
+					<li>JARDIN VERTICAL</li>
 					<li>TIPOS DE JARDIN</li>
 					<li>INSTALACIóN</li>
 				</ul>
@@ -26,17 +29,14 @@
 					<div class="contactanos__icon">
 						<img src="icons/telefono-sonando.svg" alt="telefono">
 					</div>
-					<p>¡COntactanos</p>
-					<h3>6000434</h3>
+					<p>¡Contactanos</p>
+					<h3>600 000 00</h3>
 				</div>
 			</div>
 		</nav>
 	</header>
 	<section class="section__hero">
 		<div class="hero">
-            <!-- <h1>Jardines Vericales las palmas</h1>
-			<h4>Crear un mundo mas verdad</h4>
-			<button>quiero saber mas</button> -->
 		</div>
 		<div class="inner-hero text-uppercase">
 			<h1><strong>Jardines Vericales las palmas</strong></h1>
@@ -74,17 +74,17 @@
 			<div class="bg-skew">
 				<div class="inner-skew">
 					<div class="select-options">
-						<button>Lorem, ipsum</button>
-						<button>Vertical natural</button>
-						<button>Vertical artificial</button>
-						<button>Vertical preservados</button>
-						<button>Lorem, ipsum</button>
+						<button class="btn">Lorem, ipsum</button>
+						<button class="btn active">Vertical natural</button>
+						<button class="btn">Vertical artificial</button>
+						<button class="btn">Vertical preservados</button>
+						<button class="btn">Lorem, ipsum</button>
 					</div>
 					<div class="article__1">
 						<div class="the_article">
-							<h3>JARDIN VERTICAL NARTURAL</h3>
-							<p>Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-							<button>SABER MAS</button>
+							<h3><strong>JARDIN VERTICAL NARTURAL</strong></h3>
+							<p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
+							<button class="btn btn-green">SABER MAS</button>
 						</div>
 						<div class="article-img">
 							<div class="skew-img">
@@ -96,6 +96,89 @@
 			</div>
 		</div>
 	</section>
+	<section class="install row">
+		<img class="col-sm-5" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="">
+		<div class="install__article col-sm-5">
+			<h1>INSTALACIÓN</h1>
+			<p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
+		</div>
+	</section>
+	<section class="slider-plants">
+		<!-- <div> -->
+			<img src="images/recursos/o_1fibmkdm31i3m11qnpuq6e41m2hf.jpeg" alt="">
+			<img src="images/recursos/o_1fibmi9jottb12t15kdiir1e6of.jpeg" alt="">
+			<img src="images/recursos/o_1fibmkdm31lc34ldm8hher1h59g.jpeg" alt="">
+			<img src="images/recursos/o_1fibmi9jorpobu0171g1eekbcmh.jpeg" alt="">
+		<!-- </div> -->
+<!-- 		<div id="image-slider" class="splide">
+		  <div class="splide__track">
+				<ul class="splide__list">
+					<li class="splide__slide">
+						<img src="image01.jpg">
+					</li>
+					<li class="splide__slide">
+						<img src="image02.jpg">
+					</li>
+					<li class="splide__slide">
+						<img src="image03.jpg">
+					</li>
+				</ul>
+		  </div>
+		</div> -->
+	</section>
+	<section class="info-section">
+		<div class="info__content">
+			<div class="info__content-datos">
+			<div>
+				<img class="info__logo" src="images/LOGO.png" alt="">
+			</div>
+			<ul class="list-unstyled">
+				<li>
+					<div>
+						<img src="icons/correo.svg" alt="">
+					</div>
+					info@dsidsdsds.com
+				</li>
+				<li>
+					<div>
+						<img src="icons/telefono-sonando.svg" alt="">
+						(+213) dscdssd
+					</div>
+				</li>
+			</ul>
+			<ul class="list-unstyled">
+				<li>
+					<div>
+						<img src="icons/facebook.svg" alt="">
+					</div>
+					Facebook
+				</li>
+				<li>
+					<div>
+						<img src="icons/instagram.svg" alt="">
+					</div>
+					Instagram
+				</li>
+			</ul>
+			</div>
+			<button>QUIERO SABER MAS</button>
+		</div>
+	</section>
+	<footer>
+		<div class="footer__content">
+			<div class="copyright">
+				<p>Copyright 2022 - FLor & Design. Todos los derechos reservados</p>
+				<p>Página realizada por web Las Palmas</p>
+			</div>
+			<div class="footer__info">
+				<a href="#">Aviso Legal</a> |
+				<a href="#">Politica de privacidad</a> |
+				<a href="#">Condiciones Generales</a> |
+				<a href="#">Publicidad</a> |
+				<a href="#">Contacto</a>
+			</div>
+		</div>
+	</footer>
 	<script>
 	document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
 </script>
