--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="article__one">
 			<article>
 				<h1>Lorem, ipsum.</h1>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
+				<p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
 			</article>
 			<div class="article__img__content">
 				<img src="images/recursos/o_1fi9gl76i1j45v44kebdt8171cc.jpeg" alt="">
@@ -98,7 +98,7 @@
 	</section>
 	<section class="install row">
 		<img class="col-sm-5" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="">
-		<div class="install__article col-sm-5">
+		<div class="install__article col-sm-4">
 			<h1>INSTALACIÓN</h1>
 			<p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
 		</div>
@@ -109,22 +109,6 @@
 			<img src="images/recursos/o_1fibmi9jottb12t15kdiir1e6of.jpeg" alt="">
 			<img src="images/recursos/o_1fibmkdm31lc34ldm8hher1h59g.jpeg" alt="">
 			<img src="images/recursos/o_1fibmi9jorpobu0171g1eekbcmh.jpeg" alt="">
-		<!-- </div> -->
-<!-- 		<div id="image-slider" class="splide">
-		  <div class="splide__track">
-				<ul class="splide__list">
-					<li class="splide__slide">
-						<img src="image01.jpg">
-					</li>
-					<li class="splide__slide">
-						<img src="image02.jpg">
-					</li>
-					<li class="splide__slide">
-						<img src="image03.jpg">
-					</li>
-				</ul>
-		  </div>
-		</div> -->
 	</section>
 	<section class="info-section">
 		<div class="info__content">
