--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="#" class="navbar-brand col-md-5">
 					<img src="images/LOGO.png" alt="LOGO">
 				</a>
-				<ul class="col-md-5 text-uppercase list-unstyled list-inline">
+				<ul class="col-lg-5 col-md-6 text-uppercase list-unstyled list-inline">
 					<li class="active">PORTADA</li>
 					<li>JARDIN VERTICAL</li>
 					<li>TIPOS DE JARDIN</li>
@@ -39,8 +39,8 @@
 		<div class="hero">
 		</div>
 		<div class="inner-hero text-uppercase">
-			<h1><strong>Jardines Vericales las palmas</strong></h1>
-			<h4><em>Crear un mundo mas verdad</em></h4>
+			<h1>Jardines Vericales las palmas</h1>
+			<h4><em>Crear un mundo más verdad</em></h4>
 			<button class="text-uppercase">quiero saber mas</button>
 		</div>
 	</section>
@@ -82,7 +82,7 @@
 					</div>
 					<div class="article__1">
 						<div class="the_article">
-							<h3><strong>JARDIN VERTICAL NARTURAL</strong></h3>
+							<h3 class="text-left"><strong>JARDIN VERTICAL NARTURAL</strong></h3>
 							<p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
 							<button class="btn btn-green">SABER MAS</button>
 						</div>
