--- a/index.html
+++ b/index.html
@@ -2,170 +2,189 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>FLOR & DESIGN</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="css/splide.min.css">
-	<script src="js/splide.min.js" defer></script>
-	<script src="js/mis-scripts.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FLOR & DESIGN</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!--     <script defer src="js/simple-sidebar.js"></script>
+ -->    <script defer src="js/bootstrap.min.js"></script>
+<!--     <script defer src="js/mis-scripts.js"></script>
+ -->    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
-	<header class="">
-		<nav class="">
-			<div class="nav__content row">
-				<a href="#" class="navbar-brand col-md-5">
-					<img src="images/LOGO.png" alt="LOGO">
-				</a>
-				<ul class="col-lg-5 col-md-6 text-uppercase list-unstyled list-inline">
-					<li class="active">PORTADA</li>
-					<li>JARDIN VERTICAL</li>
-					<li>TIPOS DE JARDIN</li>
-					<li>INSTALACIóN</li>
-				</ul>
-				<div class="contactanos col-md-2">
-					<div class="contactanos__icon">
-						<img src="icons/telefono-sonando.svg" alt="telefono">
-					</div>
-					<p>¡Contactanos</p>
-					<h3>600 000 00</h3>
-				</div>
-			</div>
-		</nav>
-	</header>
-	<section class="section__hero">
-		<div class="hero">
-		</div>
-		<div class="inner-hero text-uppercase">
-			<h1>Jardines Vericales las palmas</h1>
-			<h4><em>Crear un mundo más verdad</em></h4>
-			<button class="text-uppercase">quiero saber mas</button>
-		</div>
-	</section>
-	<section class="articles">
-		<div class="article__one">
-			<article>
-				<h1>Lorem, ipsum.</h1>
-				<p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
-			</article>
-			<div class="article__img__content">
-				<img src="images/recursos/o_1fi9gl76i1j45v44kebdt8171cc.jpeg" alt="">
-			</div>
-		</div>
-		<div class="article__two">
-			<div class="article__img__content">
-				<img src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="">
-			</div>
-			<article>
-				<h1>Lorem, ipsum.</h1>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
-			</article>
-			<img class="patch-img" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" alt="">
-		</div>
-		<button>Quiero saber mas</button>
-	</section>
-
-
-	<section class="tipos">
-		<h1>TIPOS DE JARDINES VERTICALES</h1>
-		<div class="skew_container">
-			<div class="bg-skew">
-				<div class="inner-skew">
-					<div class="select-options">
-						<button class="btn">Lorem, ipsum</button>
-						<button class="btn active">Vertical natural</button>
-						<button class="btn">Vertical artificial</button>
-						<button class="btn">Vertical preservados</button>
-						<button class="btn">Lorem, ipsum</button>
-					</div>
-					<div class="article__1">
-						<div class="the_article">
-							<h3 class="text-left"><strong>JARDIN VERTICAL NARTURAL</strong></h3>
-							<p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-							<button class="btn btn-green">SABER MAS</button>
-						</div>
-						<div class="article-img">
-							<div class="skew-img">
-								<img src="images/IMG_VIDEO.jpeg" alt="">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<section class="install row">
-		<img class="col-sm-5" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="">
-		<div class="install__article col-sm-4">
-			<h1>INSTALACIÓN</h1>
-			<p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
-		</div>
-	</section>
-	<section class="slider-plants">
-		<!-- <div> -->
-			<img src="images/recursos/o_1fibmkdm31i3m11qnpuq6e41m2hf.jpeg" alt="">
-			<img src="images/recursos/o_1fibmi9jottb12t15kdiir1e6of.jpeg" alt="">
-			<img src="images/recursos/o_1fibmkdm31lc34ldm8hher1h59g.jpeg" alt="">
-			<img src="images/recursos/o_1fibmi9jorpobu0171g1eekbcmh.jpeg" alt="">
-	</section>
-	<section class="info-section">
-		<div class="info__content">
-			<div class="info__content-datos">
-			<div>
-				<img class="info__logo" src="images/LOGO.png" alt="">
-			</div>
-			<ul class="list-unstyled">
-				<li>
-					<div>
-						<img src="icons/correo.svg" alt="">
-					</div>
-					info@dsidsdsds.com
-				</li>
-				<li>
-					<div>
-						<img src="icons/telefono-sonando.svg" alt="">
-						(+213) dscdssd
-					</div>
-				</li>
-			</ul>
-			<ul class="list-unstyled">
-				<li>
-					<div>
-						<img src="icons/facebook.svg" alt="">
-					</div>
-					Facebook
-				</li>
-				<li>
-					<div>
-						<img src="icons/instagram.svg" alt="">
-					</div>
-					Instagram
-				</li>
-			</ul>
-			</div>
-			<button>QUIERO SABER MAS</button>
-		</div>
-	</section>
-	<footer>
-		<div class="footer__content">
-			<div class="copyright">
-				<p>Copyright 2022 - FLor & Design. Todos los derechos reservados</p>
-				<p>Página realizada por web Las Palmas</p>
-			</div>
-			<div class="footer__info">
-				<a href="#">Aviso Legal</a> |
-				<a href="#">Politica de privacidad</a> |
-				<a href="#">Condiciones Generales</a> |
-				<a href="#">Publicidad</a> |
-				<a href="#">Contacto</a>
-			</div>
-		</div>
-	</footer>
-	<script>
-	document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
-</script>
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <!-- <div class="nav__content row"> -->
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed right-toggle" data-toggle="collapse" data-target="#target-bar" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- <a href="#" class="navbar-brand col-md-5"> -->
+                    <a href="#" class="navbar-brand">
+                        <img src="images/LOGO.png" alt="LOGO">
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" id="target-bar">
+                    <!-- <ul class="nav navbar-nav col-lg-5 col-md-6 text-uppercase list-unstyled list-inline"> -->
+                    <div class="contactanos col-md-2 nav navbar-right">
+                        <div class="contactanos__icon">
+                            <img src="icons/telefono-sonando.svg" alt="telefono">
+                        </div>
+                        <p>¡Contactanos</p>
+                        <h4>600 000 000</h4>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="#">PORTADA <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">JARDIN VERTICAL</a></li>
+                        <li><a href="#">TIPOS DE JARDIN</a></li>
+                        <li><a href="#">INSTALACIóN</a></li>
+                    </ul>
+                </div>
+        </nav>
+    </header>
+    <section class="section__hero">
+        <div class="hero">
+        </div>
+        <div class="inner-hero text-uppercase">
+            <h1>Jardines Verticales las palmas</h1>
+            <h4><em>Crear un mundo más verdad</em></h4>
+            <button class="text-uppercase">quiero saber mas</button>
+        </div>
+    </section>
+    <section class="articles">
+        <div class="article__one">
+            <article>
+                <h1>Lorem, ipsum.</h1>
+                <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
+            </article>
+            <div class="article__img__content">
+                <img src="images/recursos/o_1fi9gl76i1j45v44kebdt8171cc.jpeg" loading='lazy' alt="planta">
+            </div>
+        </div>
+        <div class="article__two">
+            <div class="article__img__content">
+                <img src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" loading='lazy' alt="planta">
+            </div>
+            <article>
+                <h1>Lorem, ipsum.</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
+            </article>
+            <img class="patch-img" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" loading='lazy' alt="planta">
+        </div>
+        <button>Quiero saber mas</button>
+    </section>
+    <section class="tipos">
+        <h1>TIPOS DE JARDINES VERTICALES</h1>
+        <div class="skew_container">
+            <div class="bg-skew">
+                <div class="inner-skew">
+                    <div class="select-options">
+                        <button class="btn">Lorem, ipsum</button>
+                        <button class="btn active">Vertical natural</button>
+                        <button class="btn">Vertical artificial</button>
+                        <button class="btn">Vertical preservados</button>
+                        <button class="btn">Lorem, ipsum</button>
+                    </div>
+                    <div class="article__1">
+                        <div class="the_article">
+                            <h3 class="md-text-left"><strong>JARDIN VERTICAL NARTURAL</strong></h3>
+                            <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
+                            <button class="btn btn-green">SABER MAS</button>
+                        </div>
+                        <div class="article-img">
+                            <div class="skew-img">
+                                <img src="images/IMG_VIDEO.jpeg" loading='lazy' alt="planta">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="install row">
+        <img class="col-lg-4 col-sm-12" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" loading='lazy' alt="planta">
+        <div class="col-lg-4 install__article">
+            <h1>INSTALACIÓN</h1>
+            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
+        </div>
+    </section>
+    <section class="slider-plants">
+        <img src="images/recursos/o_1fibmkdm31i3m11qnpuq6e41m2hf.jpeg" loading='lazy' alt="planta">
+        <img src="images/recursos/o_1fibmi9jottb12t15kdiir1e6of.jpeg" loading='lazy' alt="planta">
+        <img src="images/recursos/o_1fibmkdm31lc34ldm8hher1h59g.jpeg" loading='lazy' alt="planta">
+        <img src="images/recursos/o_1fibmi9jorpobu0171g1eekbcmh.jpeg" loading='lazy' alt="planta">
+    </section>
+    <section class="info-section">
+        <div class="info__content">
+            <div class="info__content-datos">
+                <div>
+                    <img class="info__logo" src="images/LOGO.png" loading='lazy' alt="LOGO">
+                </div>
+                <ul class="list-unstyled">
+                    <li>
+                    	<a href="#">
+                        <div>
+                            <img src="icons/correo.svg" loading='lazy' alt="correo">
+                        </div>
+                        info@dsidsdsds.com
+                        </a>
+                    </li>
+                    <li>
+                    	<a href="#">
+                        <div>
+                            <img src="icons/telefono-sonando.svg" loading='lazy' alt="telefono">
+                            (+213) dscdssd
+                        </div>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="list-unstyled">
+                    <li>
+                    	<a href="#">
+                        <div>
+                            <img src="icons/facebook.svg" loading='lazy' alt="facebook">
+                        </div>
+                        </a>
+                        Facebook
+                    </li>
+                    <li>
+                    	<a href="#">
+                        <div>
+                            <img src="icons/instagram.svg" loading='lazy' alt="instagram">
+                        </div>
+                        Instagram
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <button>QUIERO SABER MAS</button>
+        </div>
+    </section>
+    <footer>
+        <div class="footer__content">
+            <div class="copyright">
+                <p>Copyright 2022 - FLor & Design. Todos los derechos reservados</p>
+                <p>Página realizada por web Las Palmas</p>
+            </div>
+            <div class="footer__info">
+                <a href="#">Aviso Legal</a> |
+                <a href="#">Politica de privacidad</a> |
+                <a href="#">Condiciones Generales</a> |
+                <a href="#">Publicidad</a> |
+                <a href="#">Contacto</a>
+            </div>
+        </div>
+    </footer>
+    <script>
+    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+    </script>
 </body>
 
 </html>
