--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
         </nav>
     </header>
     <section class="section__hero">
-        <div class="hero">
+        <div class="hero--skew">
+        	<div class="hero__img"></div>
         </div>
         <div class="inner-hero text-uppercase">
             <h1>Jardines Verticales las palmas</h1>
-            <h4><em>Crear un mundo más verdad</em></h4>
+            <h4>Crear un mundo más verdad</h4>
             <button class="text-uppercase">quiero saber mas</button>
         </div>
     </section>
@@ -62,7 +63,7 @@
         <div class="article__one">
             <article>
                 <h1>Lorem, ipsum.</h1>
-                <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
+                <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Labore consequuntur illo dicta obcaecati! Nihil deserunt suscipit dolore voluptatibus libero mollitia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
             <div class="article__img__content">
                 <img src="images/recursos/o_1fi9gl76i1j45v44kebdt8171cc.jpeg" loading='lazy' alt="planta">
@@ -74,7 +75,7 @@
             </div>
             <article>
                 <h1>Lorem, ipsum.</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Et ratione aliquam enim quis quibusdam, maiores reiciendis. Id totam doloribus iste? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
             <img class="patch-img" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" loading='lazy' alt="planta">
         </div>
