--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="the_article">
                             <h3 class="md-text-left"><strong>JARDIN VERTICAL NARTURAL</strong></h3>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
-                            <button class="btn btn-green">SABER MAS</button>
+                            <button>SABER MAS</button>
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
