--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>FLOR & DESIGN</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/animate.css">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!--     <script defer src="js/simple-sidebar.js"></script>
- -->    <script defer src="js/bootstrap.min.js"></script>
-<!--     <script defer src="js/mis-scripts.js"></script>
- -->    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--     <script defer src="js/simple-sidebar.js"></script>
+ -->
+    <script defer src="js/bootstrap.min.js"></script>
+    <!--     <script defer src="js/mis-scripts.js"></script>
+ -->
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-default navbar-fixed-top">
-            <!-- <div class="nav__content row"> -->
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed right-toggle" data-toggle="collapse" data-target="#target-bar" aria-expanded="false">
@@ -26,13 +28,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <!-- <a href="#" class="navbar-brand col-md-5"> -->
                     <a href="#" class="navbar-brand">
                         <img src="images/LOGO.png" alt="LOGO">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="target-bar">
-                    <!-- <ul class="nav navbar-nav col-lg-5 col-md-6 text-uppercase list-unstyled list-inline"> -->
                     <div class="contactanos col-md-2 nav navbar-right">
                         <div class="contactanos__icon">
                             <img src="icons/telefono-sonando.svg" alt="telefono">
@@ -51,7 +51,7 @@
     </header>
     <section class="section__hero">
         <div class="hero--skew">
-        	<div class="hero__img"></div>
+            <div class="hero__img"></div>
         </div>
         <div class="inner-hero text-uppercase">
             <h1>Jardines Verticales las palmas</h1>
@@ -71,7 +71,7 @@
         </div>
         <div class="article__two">
             <div class="article__img__content">
-                <img src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" loading='lazy' alt="planta">
+                <img  src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
             </div>
             <article>
                 <h1>Lorem, ipsum.</h1>
@@ -130,37 +130,37 @@
                 </div>
                 <ul class="list-unstyled">
                     <li>
-                    	<a href="#">
-                        <div>
-                            <img src="icons/correo.svg" loading='lazy' alt="correo">
-                        </div>
-                        info@dsidsdsds.com
+                        <a href="#">
+                            <div>
+                                <img src="icons/correo.svg" loading='lazy' alt="correo">
+                            </div>
+                            info@florandesign.es
                         </a>
                     </li>
                     <li>
-                    	<a href="#">
-                        <div>
-                            <img src="icons/telefono-sonando.svg" loading='lazy' alt="telefono">
-                            (+213) dscdssd
-                        </div>
+                        <a href="#" class="phone">
+                            <div>
+                                <img src="icons/telefono-sonando.svg" loading='lazy' alt="telefono">
+                                (+34) 600 111 2222
+                            </div>
                         </a>
                     </li>
                 </ul>
                 <ul class="list-unstyled">
                     <li>
-                    	<a href="#">
-                        <div>
-                            <img src="icons/facebook.svg" loading='lazy' alt="facebook">
-                        </div>
+                        <a href="#">
+                            <div>
+                                <img src="icons/facebook.svg" loading='lazy' alt="facebook">
+                            </div>
                         </a>
                         Facebook
                     </li>
                     <li>
-                    	<a href="#">
-                        <div>
-                            <img src="icons/instagram.svg" loading='lazy' alt="instagram">
-                        </div>
-                        Instagram
+                        <a href="#">
+                            <div>
+                                <img src="icons/instagram.svg" loading='lazy' alt="instagram">
+                            </div>
+                            Instagram
                         </a>
                     </li>
                 </ul>
@@ -183,6 +183,8 @@
             </div>
         </div>
     </footer>
+    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script>new WOW().init();</script>
     <script>
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
