ready for review

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>FLOR & DESIGN</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <!-- <link rel="stylesheet" href="css/animate.css"> -->
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!--     <script defer src="js/simple-sidebar.js"></script>
  -->
@@ -62,7 +62,7 @@
     <section class="articles">
         <div class="article__one">
             <article>
-                <h1>Lorem, ipsum.</h1>
+                <h1>Jardines Verticales</h1>
                 <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Labore consequuntur illo dicta obcaecati! Nihil deserunt suscipit dolore voluptatibus libero mollitia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
             <div class="article__img__content">
@@ -71,10 +71,10 @@
         </div>
         <div class="article__two">
             <div class="article__img__content">
-                <img  src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
+                <img src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
             </div>
             <article>
-                <h1>Lorem, ipsum.</h1>
+                <h1>Ventajas y cualidades</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Et ratione aliquam enim quis quibusdam, maiores reiciendis. Id totam doloribus iste? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
             <img class="patch-img" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" loading='lazy' alt="planta">
@@ -95,7 +95,9 @@
                     </div>
                     <div class="article__1">
                         <div class="the_article">
-                            <h3 class="md-text-left"><strong>JARDIN VERTICAL NARTURAL</strong></h3>
+                            <h3 class="md-text-left">
+                                JARDIN VERTICAL NARTURAL
+                            </h3>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
                             <button>SABER MAS</button>
                         </div>
@@ -183,8 +185,8 @@
             </div>
         </div>
     </footer>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script>new WOW().init();</script>
+    <!-- <script type="text/javascript" src="js/wow.min.js"></script>
+    <script>new WOW().init();</script> -->
     <script>
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
