fix/bar & media

--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <title>FLOR & DESIGN</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <!-- <link rel="stylesheet" href="css/animate.css"> -->
+    <link rel="stylesheet" href="css/animate.css">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!--     <script defer src="js/simple-sidebar.js"></script>
- -->
     <script defer src="js/bootstrap.min.js"></script>
-    <!--     <script defer src="js/mis-scripts.js"></script>
- -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
@@ -53,33 +49,33 @@
         <div class="hero--skew">
             <div class="hero__img"></div>
         </div>
-        <div class="inner-hero text-uppercase">
-            <h1>Jardines Verticales las palmas</h1>
-            <h4>Crear un mundo más verdad</h4>
-            <button class="text-uppercase">quiero saber mas</button>
+        <div class="inner-hero text-uppercase ">
+            <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">Jardines Verticales las palmas</h1>
+            <h4 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">Crear un mundo más verdad</h4>
+            <button class="text-uppercase wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">quiero saber mas</button>
         </div>
     </section>
     <section class="articles">
         <div class="article__one">
-            <article>
-                <h1>Jardines Verticales</h1>
+            <article class="wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s">
+                <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">Jardines Verticales</h1>
                 <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Labore consequuntur illo dicta obcaecati! Nihil deserunt suscipit dolore voluptatibus libero mollitia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
             <div class="article__img__content">
-                <img src="images/recursos/o_1fi9gl76i1j45v44kebdt8171cc.jpeg" loading='lazy' alt="planta">
+                <img src="images/recursos/o_1fi9gl76i1j45v44kebdt8171cc.jpeg" alt="planta">
             </div>
         </div>
         <div class="article__two">
             <div class="article__img__content">
                 <img src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
             </div>
-            <article>
-                <h1>Ventajas y cualidades</h1>
+            <article class="wow slideInRight" data-wow-duration="1.2s" data-wow-delay="0.3s">
+                <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">Ventajas y cualidades</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Et ratione aliquam enim quis quibusdam, maiores reiciendis. Id totam doloribus iste? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
-            <img class="patch-img" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" loading='lazy' alt="planta">
+            <img class="patch-img wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" alt="planta">
         </div>
-        <button>Quiero saber mas</button>
+        <button class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">Quiero saber mas</button>
     </section>
     <section class="tipos">
         <h1>TIPOS DE JARDINES VERTICALES</h1>
@@ -103,7 +99,7 @@
                         </div>
                         <div class="article-img">
                             <div class="skew-img">
-                                <img src="images/IMG_VIDEO.jpeg" loading='lazy' alt="planta">
+                                <img src="images/IMG_VIDEO.jpeg" alt="planta">
                             </div>
                         </div>
                     </div>
@@ -112,29 +108,29 @@
         </div>
     </section>
     <section class="install row">
-        <img class="col-lg-5 col-sm-12" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" loading='lazy' alt="planta">
+        <img class="col-lg-5 col-sm-12" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
         <div class="col-lg-4 install__article">
             <h1>INSTALACIÓN</h1>
             <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
         </div>
     </section>
     <section class="slider-plants">
-        <img src="images/recursos/o_1fibmkdm31i3m11qnpuq6e41m2hf.jpeg" loading='lazy' alt="planta">
-        <img src="images/recursos/o_1fibmi9jottb12t15kdiir1e6of.jpeg" loading='lazy' alt="planta">
-        <img src="images/recursos/o_1fibmkdm31lc34ldm8hher1h59g.jpeg" loading='lazy' alt="planta">
-        <img src="images/recursos/o_1fibmi9jorpobu0171g1eekbcmh.jpeg" loading='lazy' alt="planta">
+        <img src="images/recursos/o_1fibmkdm31i3m11qnpuq6e41m2hf.jpeg" alt="planta">
+        <img src="images/recursos/o_1fibmi9jottb12t15kdiir1e6of.jpeg" alt="planta">
+        <img src="images/recursos/o_1fibmkdm31lc34ldm8hher1h59g.jpeg" alt="planta">
+        <img src="images/recursos/o_1fibmi9jorpobu0171g1eekbcmh.jpeg" alt="planta">
     </section>
     <section class="info-section">
         <div class="info__content">
             <div class="info__content-datos">
                 <div>
-                    <img class="info__logo" src="images/LOGO.png" loading='lazy' alt="LOGO">
+                    <img class="info__logo" src="images/LOGO.png" alt="LOGO">
                 </div>
                 <ul class="list-unstyled">
                     <li>
                         <a href="#">
                             <div>
-                                <img src="icons/correo.svg" loading='lazy' alt="correo">
+                                <img src="icons/correo.svg" alt="correo">
                             </div>
                             info@florandesign.es
                         </a>
@@ -142,7 +138,7 @@
                     <li>
                         <a href="#" class="phone">
                             <div>
-                                <img src="icons/telefono-sonando.svg" loading='lazy' alt="telefono">
+                                <img src="icons/telefono-sonando.svg" alt="telefono">
                                 (+34) 600 111 2222
                             </div>
                         </a>
@@ -152,7 +148,7 @@
                     <li>
                         <a href="#">
                             <div>
-                                <img src="icons/facebook.svg" loading='lazy' alt="facebook">
+                                <img src="icons/facebook.svg" alt="facebook">
                             </div>
                         </a>
                         Facebook
@@ -160,7 +156,7 @@
                     <li>
                         <a href="#">
                             <div>
-                                <img src="icons/instagram.svg" loading='lazy' alt="instagram">
+                                <img src="icons/instagram.svg" alt="instagram">
                             </div>
                             Instagram
                         </a>
@@ -185,8 +181,10 @@
             </div>
         </div>
     </footer>
-    <!-- <script type="text/javascript" src="js/wow.min.js"></script>
-    <script>new WOW().init();</script> -->
+    <script type="text/javascript" src="js/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
     <script>
     document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
