--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                     </div>
                     <div class="article__1">
                         <div class="the_article">
-                            <h3 class="md-text-left">
+                            <h3 class="md-text-left wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">
                                 JARDIN VERTICAL NARTURAL
                             </h3>
-                            <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
+                            <p class="text-justify wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.3s">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
                             <button>SABER MAS</button>
                         </div>
                         <div class="article-img">
@@ -110,8 +110,8 @@
     <section class="install row">
         <img class="col-lg-5 col-sm-12" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
         <div class="col-lg-4 install__article">
-            <h1>INSTALACIÓN</h1>
-            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
+            <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">INSTALACIÓN</h1>
+            <p class="text-justify wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.3s">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
         </div>
     </section>
     <section class="slider-plants">
@@ -184,9 +184,6 @@
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script>
     new WOW().init();
-    </script>
-    <script>
-    document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
 </body>
 
