fix: button position and transition

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </article>
             <img class="patch-img wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" alt="planta">
         </div>
-        <button class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">Quiero saber mas</button>
+        <div class="content__button">
+            <button class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">Quiero saber mas</button>
+        </div>
     </section>
     <section class="tipos">
         <h1>TIPOS DE JARDINES VERTICALES</h1>
@@ -181,6 +183,7 @@
             </div>
         </div>
     </footer>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script>
     new WOW().init();
