--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
     <section id="jardin-vertical" class="articles">
         <div class="article__one">
             <article class="wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s">
-                <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">Jardines Verticales</h1>
+                <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">
+                    <span>
+                        <img src="icons/simboloFaD.svg" alt="icon">
+                    </span> JARDINES VERTICALES</h1>
                 <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Labore consequuntur illo dicta obcaecati! Nihil deserunt suscipit dolore voluptatibus libero mollitia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
             <div class="article__img__content">
@@ -94,7 +97,8 @@
                 <img src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
             </div>
             <article class="wow slideInRight" data-wow-duration="1.2s" data-wow-delay="0.3s">
-                <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">Ventajas y cualidades</h1>
+                <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.6s">VENTAJAS Y CUALIDADES</h1>
+                <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Et ratione aliquam enim quis quibusdam, maiores reiciendis. Id totam doloribus iste? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi nam natus amet cupiditate, minus minima fuga cum fugit? Dignissimos reiciendis blanditiis vel maxime tenetur, tempore odit commodi sed consectetur esse.</p>
             </article>
             <img class="patch-img wow slideInLeft" data-wow-duration="1.2s" data-wow-delay="0.3s" src="images/recursos/f6c85e72807a33d5c62c80fbd098b606.png" alt="planta">
@@ -179,6 +183,7 @@
                             <h3 class="md-text-left">
                                 JARDIN VERTICAL NARTURAL 1
                             </h3>
+                            <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
                             <p class="text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Quam aliquid fugit quisquam, ipsum distinctio possimus fuga quia quidem et nesciunt reprehenderit culpa corporis blanditiis necessitatibus animi obcaecati a quaerat quos nobis? Cum corporis beatae itaque nobis esse minus quo dolorum illo mollitia, similique libero laboriosam totam maiores dolorem quos odio.</p>
                             <button>SABER MAS 1</button>
                         </div>
@@ -263,9 +268,12 @@
         </div>
     </section>
     <section id="instalacion" class="install row">
-        <img class="col-lg-5 col-sm-12" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
+        <div class="col-lg-5 col-sm-12 install_img">
+            <img class="" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
+        </div>
         <div class="col-lg-4 install__article">
             <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">INSTALACIÓN</h1>
+            <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
             <p class="text-justify wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.3s">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
         </div>
     </section>
@@ -294,8 +302,8 @@
                         <a href="#" class="phone">
                             <div>
                                 <img src="icons/telefono-sonando.svg" alt="telefono">
-                                (+34) 600 111 2222
                             </div>
+                            (+34) 600 111 2222
                         </a>
                     </li>
                 </ul>
@@ -305,15 +313,15 @@
                             <div>
                                 <img src="icons/facebook.svg" alt="facebook">
                             </div>
-                        </a>
                         Facebook
+                        </a>
                     </li>
                     <li>
                         <a href="#">
                             <div>
                                 <img src="icons/instagram.svg" alt="instagram">
                             </div>
-                            Instagram
+                        Instagram
                         </a>
                     </li>
                 </ul>
