--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLOR & DESIGN</title>
+    <link rel="stylesheet" href="css/simple-sidebar.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/animate.css">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script defer src="js/simple-sidebar.js"></script>
     <script defer src="js/bootstrap.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
@@ -268,10 +270,10 @@
         </div>
     </section>
     <section id="instalacion" class="install row">
-        <div class="col-lg-5 col-sm-12 install_img">
+        <div class="col-lg-5 col-md-6 col-sm-12 install_img">
             <img class="" src="images/recursos/o_1fi2238cn1gf21ma8lke15n8cgoa.jpeg" alt="planta">
         </div>
-        <div class="col-lg-4 install__article">
+        <div class="col-lg-4 col-md-6 install__article">
             <h1 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay="0.3s">INSTALACIÓN</h1>
             <div class="adorno"><img src="icons/simboloFaD.svg" alt="icon"></div>
             <p class="text-justify wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.3s">Lorem ipsum dolor sit amet consectetur adipisicing, elit. Corrupti dignissimos dolor quo, nam, atque voluptatum deleniti mollitia cum officiis officia quam delectus, ullam odit praesentium. Debitis quia veniam, expedita! Numquam dolores ratione molestiae eos, cupiditate quibusdam! Sunt aspernatur blanditiis, iure!</p>
@@ -347,7 +349,12 @@
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script>
-    new WOW().init();
+        new WOW().init();
+
+        $(".menu-toggle-sidebar").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
     </script>
 </body>
 
